# SciVerseGym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
data/alex-mp-20/: README.md
docs/: README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  crystal-playground.html  index.html  manual.html
sciverse_gym/: __init__.py  structures.py
sciverse_gym/benchmarks/: __init__.py
sciverse_gym/benchmarks/bo_baselines/: __init__.py  simple_bo.py
sciverse_gym/benchmarks/llm_agents/: __init__.py
sciverse_gym/benchmarks/rl_baselines/: __init__.py  random_rollout.py
sciverse_gym/calculators/: __init__.py  base.py  checkpoints.py  factory.py  mattersim.py  mlff.py  orb.py  physical.py  references.py  sevennet.py  surrogate.py
sciverse_gym/datasets/: __init__.py  alex_mp20.py
sciverse_gym/envs/: __init__.py  actions.py  crystal_discovery.py  crystal_doping.py  crystal_inverse_design.py  crystal_relax.py
sciverse_gym/observations/: __init__.py  cif.py  graph.py  xrd.py
sciverse_gym/rewards/: __init__.py  hull.py  multi_objective.py  novelty.py
tests/: test_crystal_discovery.py
